[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Scripts/EntradaNoh.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Entrada" type="Area2D" groups=["entrada"]]
position = Vector2( -48, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Entrada_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Entrada_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Entrada_mouse_exited"]
